Got stuck on banner part, will fix it later

--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+  
     
 }
 
 .top-menu-buttons {
 
+    
     width: 100px;
     height: 21px;
     padding-top: 3px;
@@ -35,6 +37,7 @@ body {
     margin-right: 5px;
     color: var(--blue);
     font-weight: bold;
+    
 
 }
 
@@ -43,7 +46,49 @@ body {
     background-color: var(--orange) ;
     color: var(--white);
     cursor: pointer;
+
 }
 
+.banner-container {
+
+    display: flex;
+    justify-content: center;
+    
+
+}
+
+#banner-background-img {
+    width: 100%;
+    height: 600px;
+    opacity: 0.7;
+    position: relative;
+    
+}
+
+.banner-inner-section {
+    width: 250px;
+    height: 100px;
+    
+    position: absolute;
+    margin-top: 100px;
+    margin-left: 1%;
+    
+    
+}
+
+#myPicture {
+    width: 150px;
+    height: 150px;
+    border: 5px solid var(--white);
+    border-radius: 50%;
+    margin-left: 13%;
+    
+} 
+
+h1 {
+    font-size: 4.4em;
+    color: var(--white);
+    
+}
 
 
